@@ -1,6 +1,6 @@
 --- M0N0WALL_GENERIC.orig	2011-05-07 19:50:50.000000000 +0000
 +++ M0N0WALL_GENERIC	2011-05-07 21:03:53.000000000 +0000
-@@ -1,8 +1,5 @@
+@@ -1,10 +1,7 @@
 -machine		i386
 -cpu		I486_CPU
 -cpu		I586_CPU
@@ -9,7 +9,10 @@
 +cpu		HAMMER	
 +ident		M0N0WALL_GENERIC64
  
- makeoptions	MODULES_OVERRIDE="dummynet ipfw acpi if_tap if_vlan"
+-makeoptions	MODULES_OVERRIDE="dummynet ipfw acpi if_tap if_vlan"
++makeoptions	MODULES_OVERRIDE="dummynet ipfw if_tap if_vlan"
+ 
+ options		HZ=1000
  
 @@ -28,16 +25,12 @@
  options 	KBD_INSTALL_CDEV	# install a CDEV entry in /dev
@@ -29,15 +32,17 @@
  options		NO_SWAPPING
  options         DEVICE_POLLING
  
-@@ -54,7 +47,6 @@
+@@ -54,8 +47,8 @@
  options		IPSTEALTH
  
  # Bus support.
 -device		eisa
  device		pci
++device		acpi
  
  # Floppy drives
-@@ -69,7 +61,6 @@
+ device		fdc
+@@ -69,7 +62,6 @@
  options 	ATA_STATIC_ID	# Static device numbering
  
  # SCSI Controllers
@@ -45,15 +50,34 @@
  device		ahc		# AHA2940 and onboard AIC7xxx devices
  options 	AHC_REG_PRETTY_PRINT	# Print register bitfields in debug
  					# output.  Adds ~128k to driver.
-@@ -123,7 +114,6 @@
- device		ida		# Compaq Smart RAID
+@@ -87,7 +79,6 @@
+ 
+ device		adv		# Advansys SCSI adapters
+ device		adw		# Advansys wide SCSI adapters
+-device		aha		# Adaptec 154x SCSI adapters
+ device		aic		# Adaptec 15[012]x SCSI adapters, AIC-6[23]60.
+ device		bt		# Buslogic/Mylex MultiMaster SCSI adapters
+ 
+@@ -107,7 +98,6 @@
+ # RAID controllers interfaced to the SCSI subsystem
+ device		amr		# AMI MegaRAID
+ device		arcmsr		# Areca SATA II RAID
+-device		asr		# DPT SmartRAID V, VI and Adaptec SCSI RAID
+ device		ciss		# Compaq Smart RAID 5*
+ device		dpt		# DPT Smartcache III, IV - See NOTES for options
+ device		hptmv		# Highpoint RocketRAID 182x
+@@ -120,10 +110,8 @@
+ # RAID controllers
+ device		aac		# Adaptec FSA RAID
+ device		aacp		# SCSI passthrough for aac (requires CAM)
+-device		ida		# Compaq Smart RAID
  device		mfi		# LSI MegaRAID SAS
  device		mlx		# Mylex DAC960 family
 -device		pst		# Promise Supertrak SX6000
  device		twe		# 3ware ATA RAID
  
  # atkbdc0 controls both the keyboard and the PS/2 mouse
-@@ -137,9 +127,6 @@
+@@ -137,9 +125,6 @@
  # syscons is the default console driver, resembling an SCO console
  device		sc
  
@@ -63,7 +87,7 @@
  # PCCARD (PCMCIA) support
  # PCMCIA and cardbus bridge support
  device		cbb		# cardbus (yenta) bridge
-@@ -201,7 +188,6 @@
+@@ -201,7 +187,6 @@
  device		ex		# Intel EtherExpress Pro/10 and Pro/10+
  device		ep		# Etherlink III based cards
  device		fe		# Fujitsu MB8696x based cards
@@ -71,7 +95,7 @@
  device		sn		# SMC's 9000 series of Ethernet chips
  device		xe		# Xircom pccard Ethernet
  
-@@ -259,7 +245,6 @@
+@@ -259,7 +244,6 @@
  device		cryptodev
  device		hifn
  device		padlock
